<resources>
    <string name="app_name">Arrive Live</string>

    <string name="login_driver_title">Driver Login</string>
    <string name="login_to_driver_action">Login</string>

    <string name="rides_confirm_your_ride">Confirm your ride</string>
    <string name="rides_item_different_ride">Different Ride • Flagged Trip</string>
    <string name="rides_driver_id">Arrive ID %s</string>

    <string name="payment_method_pay_with_card">Pay with Card</string>
    <string name="payment_method_show_breakdown">Show breakdown</string>
    <string name="payment_method_total">Total</string>
    <string name="payment_method_fees">Includes credit card fees</string>
    <string name="payment_method_breakdown_min">" (%1$d min)"</string>

    <string name="payment_result_disclaimer">Returning to homescreen in %s seconds</string>
    <string name="payment_result_powered_by">Powered by</string>

    <string name="error_network_message">No internet connection</string>
    <string name="error_something_bad_happen">Something bad happen. Try again later</string>
    <string name="error_field_empty">Please fill the field</string>
    <string name="error_please_wait">Please wait</string>

    <string name="success_payment_successful">Payment Successful</string>
    <string name="success_payment_declined">Payment Successful</string>
    <string name="success_payment_error">Payment Error</string>

    <string name="login_enter_driver_id">Enter Driver ID</string>

    <string name="no_price_set_title">No Price Set</string>
    <string name="no_rice_message">Please ask the driver to add a price to the trip</string>
    <string name="no_price_action">Done</string>

    <string name="driver_my_account">My Account</string>
    <string name="driver_title">Welcome to</string>

    <string name="account_arrive_miles">Arrive Miles</string>
    <string name="account_balance">Balance</string>
    <string name="account_credit">Credit</string>
    <string name="account_refill_account">Refill account</string>
    <string name="account_arrive_wallet">Arrive wallet</string>
    <string name="account_add_new">Add new</string>
    <string name="account_payment">Account payment</string>
    <string name="account_confirm_payment">Confirm payment</string>
    <string name="account_back">Back</string>
    <string name="account_number_hint">Account number</string>
    <string name="account_number_pin">PIN</string>
    <string name="account_refill_success_message">You added %1$s amount to your account!</string>

    <string name="account_login_title">Login to your account</string>

    <string name="item_card_default">Default</string>

    <string name="enter_card_tap_or_insert">Tap or insert</string>

    <string name="account_price_other">Other</string>
    <string name="price_50">$50</string>
    <string name="price_75">$75</string>
    <string name="price_100">$100</string>

    <string name="dialog_confirmation_text">Are you sure you want to proceed?</string>
    <string name="dialog_confirmation_ok">OK</string>
    <string name="dialog_confirmation_cancel">Cancel</string>

    <string name="common_cancel">Cancel</string>
    <string name="common_hint_account_number">Account number</string>
    <string name="common_hint_pin">Pin</string>
    <string name="common_try_again">Try again</string>
    <string name="common_hint_credit_card">Credit Card</string>
    <string name="common_hint_card_exp">Exp  /</string>
    <string name="common_hint_cvc">CVC</string>
    <string name="payment_result_rate_title">How was your ride?</string>
</resources>