<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_horizontal_padding"
    android:paddingVertical="24dp"
    tools:ignore="ContentDescription">


    <ImageView
        android:id="@+id/iconSuccess"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_error" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_price_set_title"
        android:textColor="@color/neutral_900"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/no_rice_message"
        android:textColor="@color/neutral_600"
        android:textSize="18sp" />

    <com.arrive.terminal.core.ui.view.AppButtonView
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginTop="20dp"
        app:text="@string/no_price_action" />

</LinearLayout>