<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/backgroundContainer"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/confirmation_text"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_big"
        android:text="@string/dialog_confirmation_text"
        android:textColor="@color/textWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            style="@style/Text.Subtitle.Small"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_confirmation_cancel" />

        <TextView
            android:id="@+id/ok"
            style="@style/Text.Subtitle.Small"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/background_rectangle_radius_36_color_white"
            android:gravity="center"
            android:text="@string/dialog_confirmation_ok"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>