<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/circular_gradient_red"
            app:layout_constraintBottom_toBottomOf="@id/topContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="-150dp"/>

        <LinearLayout
            android:id="@+id/topContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/bottomContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/iconSuccess"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_success" />

            <TextView
                android:id="@+id/title"
                style="@style/Text.Subtitle.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                tools:text="@string/success_payment_successful" />

            <TextView
                android:id="@+id/price"
                style="@style/Text.Subtitle.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_half_small"
                android:hint="$7.09"
                android:textColorHint="@color/white"/>

            <TextView
                android:id="@+id/message"
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Invalid card number"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/rateContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rate_title"
                    style="@style/Text.Body.ExtraSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="24.dp"
                    tools:text="@string/payment_result_rate_title" />

                <LinearLayout
                    android:id="@+id/starsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_outline" />

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_outline" />

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_outline" />

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_outline" />

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_outline" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topContainer">

            <TextView
                android:id="@+id/disclaimer"
                style="@style/Text.Body.ExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="Returning to homescreen in 5 seconds" />

            <TextView
                android:id="@+id/poweredBy"
                style="@style/Text.Body.ExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="@dimen/padding_half_small"
                tools:text="@string/payment_result_powered_by"
                android:textSize="13sp"
                android:visibility="gone"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/ic_logo" />

            <com.arrive.terminal.core.ui.view.AppButtonView
                android:id="@+id/tryAgain"
                style="@style/Button.White"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="26dp"
                android:visibility="gone"
                tools:text="Try again?"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>