<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/Text.Default.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="12dp"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/ic_account"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/mainInfoContainer"
            app:layout_constraintEnd_toStartOf="@id/logout"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Hello Mendy" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:foreground="@drawable/selectable_button_circle"
            android:padding="8dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_container"
            android:paddingVertical="18dp"
            app:layout_constraintBottom_toTopOf="@id/refillContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:id="@+id/miles"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="42sp"
                app:layout_constraintBottom_toTopOf="@id/milesTitle"
                app:layout_constraintEnd_toStartOf="@id/centerGuideline"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="352" />

            <TextView
                android:id="@+id/milesTitle"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/account_arrive_miles"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/miles"
                app:layout_constraintStart_toStartOf="@id/miles"
                app:layout_constraintTop_toBottomOf="@id/miles" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/balance"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autoSizeMinTextSize="24sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="42sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@id/balanceTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/centerGuideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$52" />

            <TextView
                android:id="@+id/balanceTitle"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/account_balance"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/balance"
                app:layout_constraintStart_toStartOf="@id/balance"
                app:layout_constraintTop_toBottomOf="@id/balance" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/refillContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_container"
            android:clipToPadding="false"
            android:paddingTop="14dp"
            app:layout_constraintBottom_toTopOf="@id/cardsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainInfoContainer">

            <TextView
                android:id="@+id/refillTitle"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:drawablePadding="12dp"
                android:text="@string/account_refill_account"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_refill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/refillTitle">

                <LinearLayout
                    android:id="@+id/variantContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/variant50"
                        style="@style/Text.Variant"
                        android:layout_width="75dp"
                        android:layout_height="40dp"
                        android:text="$50" />

                    <TextView
                        android:id="@+id/variant75"
                        style="@style/Text.Variant"
                        android:layout_width="75dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="6dp"
                        android:text="$75" />

                    <TextView
                        android:id="@+id/variant100"
                        style="@style/Text.Variant"
                        android:layout_width="75dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="6dp"
                        android:text="$100" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_marginStart="6dp">

                        <View
                            android:id="@+id/variantOtherLabel"
                            style="@style/Text.Variant"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="top"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/variantOther"
                            style="@style/Text.Variant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:minWidth="75dp"
                            android:paddingHorizontal="8dp"
                            android:paddingBottom="22dp"
                            android:text="Other"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/refill"
                        style="@style/Button.Arrow"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="6dp" />

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_container"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refillContainer">

            <TextView
                android:id="@+id/cardsTitle"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:text="@string/account_arrive_wallet"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_wallet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addNew"
                style="@style/Text.Default.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_add_new"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/cardsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/background_rectangle_radius_10_color_item"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardsTitle"
                tools:itemCount="3"
                tools:listitem="@layout/item_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>